Removed autocomplete="off" for email fields, since it wasn't disabling it anyway in Chrome.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -47,7 +47,7 @@
                     <!--</div>-->
                     <div class="form-group">
                       <label class="sr-only" for="registerEmail">Email address</label>
-                      <input ng-model="email" type="email" id="registerEmail" class="form-control" placeholder="Email address" required autocomplete="off">
+                      <input ng-model="email" type="email" id="registerEmail" class="form-control" placeholder="Email address" required>
                     </div>
                     <div class="form-group">
                       <label class="sr-only" for="registerPassword">Password</label>
@@ -78,7 +78,7 @@
                   <form class="form" role="form">
                     <div class="form-group">
                       <label class="sr-only" for="loginEmail">Email address</label>
-                      <input ng-model="email" type="email" class="form-control" id="loginEmail" placeholder="Email address" required autocomplete="off">
+                      <input ng-model="email" type="email" class="form-control" id="loginEmail" placeholder="Email address" required>
                     </div>
                     <div class="form-group">
                       <label class="sr-only" for="loginPassword">Password</label>
