--- a/app/views/pools/edit.html
+++ b/app/views/pools/edit.html
@@ -1,5 +1,4 @@
-<div data-ng-controller="PoolsController" data-ng-init="findOnePool()">
-
+<div data-ng-init="findOnePool()">
   <form class="form-horizontal">
     <fieldset>
       <legend>Your pool</legend>
