--- a/app/views/brackets/list.html
+++ b/app/views/brackets/list.html
@@ -9,5 +9,5 @@
     </li>
   </ul>
   <br>
-  <a href="#/brackets/create">Create a new Bracket</a>
+  <a href="#/pools/{{ poolId }}/brackets/create">Create a new Bracket</a>
 </div>
