added 2 new fields to the create bracket page's grid (region and conference), and changed it to save team ids
also made some styling changes to the create bracket view, to increase the size of the teams grid

--- a/app/views/brackets/edit.html
+++ b/app/views/brackets/edit.html
@@ -1,7 +1,7 @@
 <div data-ng-init="findOneBracket(); findTeams();">
   <form class="form-horizontal" role="form">
     <fieldset>
-      <legend>Your bracket</legend>
+      <legend style="margin-bottom: 0">Your bracket</legend>
 
       <div class="container">
         <div class="row">
@@ -15,7 +15,7 @@
         <div class="row">
           <h4>Select {{requiredNumTeams}} teams whose seeds add up to {{requiredSumOfSeeds}}:</h4>
           <br/>
-          <div class="col-md-4" style="padding-left: 0;">
+          <div class="col-md-5">
             <div class="gridStyle" ng-grid="gridOptions"></div>
           </div>
           <div class="selectedItems col-md-6">
@@ -23,6 +23,7 @@
             <ul class="unstyled">
               <li data-ng-repeat="selectedTeam in selectedTeams | orderBy:'seed'">{{selectedTeam.seed}} - {{selectedTeam.full_name}}</li>
             </ul>
+            <br/>
             <div class="progress">
               <div class="progress-bar"
                    role="progressbar"
@@ -32,7 +33,7 @@
                    ng-style="{width: 100 * selectedTeams.length/requiredNumTeams + '%'}"
                    ng-class="{'progress-bar-success': selectedTeams.length === requiredNumTeams,
                               'progress-bar-danger': selectedTeams.length > requiredNumTeams}">
-                <span style="min-width: 30px">Teams: {{selectedTeams.length}} / {{requiredNumTeams}}</span>
+                <span>Teams: {{selectedTeams.length}} / {{requiredNumTeams}}</span>
               </div>
             </div>
             <div class="progress">
@@ -44,25 +45,27 @@
                    ng-style="{width: 100 * sumOfSeeds/requiredSumOfSeeds + '%'}"
                    ng-class="{'progress-bar-success': sumOfSeeds === requiredSumOfSeeds,
                               'progress-bar-danger': sumOfSeeds > requiredSumOfSeeds}">
-                <span style="min-width: 30px">Seeds: {{sumOfSeeds}} / {{requiredSumOfSeeds}}</span>
+                <span>Seeds: {{sumOfSeeds}} / {{requiredSumOfSeeds}}</span>
               </div>
             </div>
           </div>
         </div>
         <br/>
-        <div class="col-md-1">
-          <button type="button" class="btn btn-default">
-            <a href="#/pools/{{ poolId }}/brackets">View all Brackets</a>
-          </button>
-        </div>
-        <div class="col-md-1 col-md-offset-1" style="padding-right: 0" data-ng-show="!bracketId">
-          <button data-ng-click="createBracket()"
-                  ng-disabled="!bracket.name || selectedTeams.length !== requiredNumTeams || sumOfSeeds !== requiredSumOfSeeds"
-                  ng-class="{'btn-success': selectedTeams.length <= requiredNumTeams && sumOfSeeds <= requiredSumOfSeeds,
-                             'btn-danger': selectedTeams.length > requiredNumTeams || sumOfSeeds > requiredSumOfSeeds}"
-                  class="btn pull-right">
-            Create Bracket
-          </button>
+        <div class="row">
+          <div class="col-md-2">
+            <button type="button" class="btn btn-default">
+              <a href="#/pools/{{ poolId }}/brackets">View all Brackets</a>
+            </button>
+          </div>
+          <div class="col-md-2 col-md-offset-1" data-ng-show="!bracketId">
+            <button data-ng-click="createBracket()"
+                    ng-disabled="!bracket.name || selectedTeams.length !== requiredNumTeams || sumOfSeeds !== requiredSumOfSeeds"
+                    ng-class="{'btn-success': selectedTeams.length <= requiredNumTeams && sumOfSeeds <= requiredSumOfSeeds,
+                               'btn-danger': selectedTeams.length > requiredNumTeams || sumOfSeeds > requiredSumOfSeeds}"
+                    class="btn pull-right">
+              Create Bracket
+            </button>
+          </div>
         </div>
       </div>
 
