The pool screen now shows all the brackets in the pool.
This took a lot of CSS hacking, to get the ng-grid bracket too look right, when ng-included into the pool page. Also changed the way bracket ids are stored in the pool, to be keyed by the user id. This makes it easy to tell which bracket belongs to the currently logged in user.

I also downloaded all of the rawgithub.com static assets, and checked them into a thirdParty directory for CSS and JS.

--- a/app/views/brackets/edit.html
+++ b/app/views/brackets/edit.html
@@ -1,4 +1,4 @@
-<div data-ng-init="findAllTeams().then(getBracketForEditing);">
+<div data-ng-init="findAllTeams().then(getBracketForEditing);" data-ng-controller="BracketsController">
   <form class="form-horizontal" role="form">
     <fieldset>
       <legend style="margin-bottom: 0">{{isNewBracket ? 'Create' : 'Update'}} your bracket</legend>
