--- a/app/views/brackets/list.html
+++ b/app/views/brackets/list.html
@@ -1,4 +1,4 @@
-<div data-ng-init="findOnePool(); findBrackets();">
+<div data-ng-init="findOnePool(); findBrackets();" data-ng-controller="BracketsController">
   <h3>{{pool.name}} Brackets</h3>
   <h4>All Brackets</h4>
   <ul class="unstyled">
