--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,6 +1,9 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+    padding-top: 50px;
+
+    /*background-image:url('http://placekitten.com/800/600');*/
+    /*background-size: 100%;*/
 }
 
 /* for ng-grid directive on the create bracket page */
@@ -59,7 +62,14 @@ body {
     text-align: center;
 }
 
-
+.poolBracket .bracketGrid {
+    /* CSS hack: this is the minimum height possible to allow the bracket grid to render without scroll bars,
+       even though it results in an extra half-row of whitespace below the last row, just above the footer. */
+    height: 489px;
+}
+.currentUserBracket p {
+    margin-top: 10px;
+}
 
 .hide {
    display: none;
