Removed ngGridLayoutPlugin from bracketsController.js since it wasn't needed anymore, because I'm setting the grid height explicitly in app.css.
Added better null handling of currentUserBrackets to poolsController.js, fixing a couple of bugs. Removed brackets list route and html, since that's part of the pool view page now.

--- a/app/views/brackets/edit.html
+++ b/app/views/brackets/edit.html
@@ -35,9 +35,7 @@
         <br/>
         <div class="row">
           <div class="col-md-2">
-            <button type="button" class="btn btn-default">
-              <a href="#/pools/{{ poolId }}/brackets">View all Brackets</a>
-            </button>
+              <a class="btn btn-default" href="#/pools/{{ poolId }}">View all Brackets</a>
           </div>
           <div class="col-md-2 col-md-offset-1">
             <button data-ng-click="saveBracket()"
