Styles and formatting: added gray background color and Julie's gray bracket image for the home page.

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -83,9 +83,7 @@
   <!-- www.google.com/fonts/specimen/Ubuntu -->
   <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
   <div class="row-fluid heading">
-    <div class="span12">
-      <h1>March Madness Pick 13 Tournament Pool</h1>
-    </div>
+    <h1>March Madness Pick 100 Tournament Pool</h1>
   </div>
   <div class="row-fluid subheading">
     <div class="span12">
@@ -95,25 +93,7 @@
     </div>
   </div>
 
-  <!-- Beyond this part the marketing copy begins. -->
-  <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
-  <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
-  <!-- http://placehold.it -->
-  <div class="row-fluid section1">
-    <div class="span5 offset1 asset">
-      <img src="http://i.imgur.com/QKCV1mK.png" alt="Picture of Excel-based game">
-    </div>
-    <div class="span5 copy">
-      <ul>
-        <li>Tired of the same ol' March Madness pool every year?</li>
-        <li>Sick of picking every single game, when all you really care about is a handful of teams?</li>
-        <li>Wish you had a slick online bracket, instead of emailing MS Excel files back and forth?</li>
-      </ul>
-      <p>
-        Well then, <em>you</em> need to play the Pick 13 March Madness pool this year! It's easy; you just pick <strong>13</strong> teams, whose seeds add up to <strong>100</strong>. That's it!
-      </p>
-    </div>
-  </div>
+  <img src="img/BracketBackground.jpg" class="center-block"/>
 
   <div class="row-fluid section2">
     <div class="span5 offset1 copy copy-right">
