--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,9 +1,10 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
     padding-top: 50px;
+    background-color: #dddddd;
 
-    /*background-image:url('http://placekitten.com/800/600');*/
-    /*background-size: 100%;*/
+    /*background: url('/app/img/basketball.png') center center;*/
+    /*background-size: 200px;*/
 }
 
 /* for ng-grid directive on the create bracket page */
@@ -14,7 +15,7 @@ body {
 }
 
 /* styles for the view-bracket module */
-.viewBracket h2 {
+.viewBracket h3 {
     /* this allows the .bracketOwner to follow on the same line */
     display: inline-block;
 }
@@ -62,6 +63,7 @@ body {
     text-align: center;
 }
 
+/* styles for the pool view page */
 .poolBracket .bracketGrid {
     /* CSS hack: this is the minimum height possible to allow the bracket grid to render without scroll bars,
        even though it results in an extra half-row of whitespace below the last row, just above the footer. */
@@ -70,6 +72,9 @@ body {
 .currentUserBracket p {
     margin-top: 10px;
 }
+
+
+
 
 .hide {
    display: none;
@@ -80,14 +85,6 @@ body {
   border-bottom: 0.1em solid black;
   margin-bottom: 2em;
   padding: 0 0 0.5em;
-}
-
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
 }
 
 .menu > li {
@@ -135,38 +132,3 @@ fieldset {
    margin-right: 25px;
    padding: 25px;
 }
-
-
-/* COPIED FROM pick-13-pool app.css (i.e. Bootstrap 2) */
-/*
-.navbar .nav> li > a.brand {
-    padding-left: 20px;
-    margin-left: 0;
-}
-
-.content {
-    margin-top: 50px;
-    width: 100%;
-}
-
-footer {
-   position:fixed;
-   left:0px;
-   bottom:0px;
-   height:30px;
-   width:100%;
-   background:#ddd;
-   -webkit-box-shadow: 0 8px 6px 6px black;
-     -moz-box-shadow: 0 8px 6px 6px black;
-          box-shadow: 0 8px 6px 6px black;
-}
-footer p{
-     padding: 5px 0 12px 10px;
-}
-
-.navlist li
-{
-  display: inline;
-  list-style-type: none;
-}
-*/
