--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800">
 
 <style type="text/css">
   /* Large desktop */
@@ -8,24 +8,12 @@
     body {
      padding-top: 60px;
     }
-   .linediv-l {
-     border-right: 1px white solid;
-    }
-   .linediv-r {
-     border-left: 1px white solid;
-   }
   }
 
   /* Landscape phones and down */
   @media (max-width: 480px) {
    .copy {
      padding: 2.5% 10%;
-   }
-   .linediv-l {
-     border-bottom: 1px white solid;
-   }
-   .linediv-r {
-     border-top: 1px white solid;
    }
   }
 
@@ -55,23 +43,11 @@
     padding-bottom: 2.5%;
     text-align: justify;
   }
-  .asset {
-    padding: 2.5% 0%;
-  }
-  .footer {
-    color: #cccccc;
-    text-align: center;
-  }
   .footer p {
     font-size: 11px;
   }
   .footer a {
     color: #ccccff;
-  }
-  /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */
-  div.addthis_toolbox {
-    width:180px;
-    margin: 0 auto;
   }
 </style>
 
