Removed ng-cloak directive from pool view.html
Hoping this fixes the problem with content not rendering when a user isn't logged in yet.

--- a/app/views/pools/view.html
+++ b/app/views/pools/view.html
@@ -1,4 +1,4 @@
-<div data-ng-init="findOnePool(); findBrackets();" ng-cloak>
+<div data-ng-init="findOnePool(); findBrackets();">
         <h2 style="display: inline-block; padding-right: 30px">{{ pool.name }}</h2>
         <strong>Manager: </strong>{{ manager.name }}
         <br/>
